--- a/JavaScript/main.html
+++ b/JavaScript/main.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <h1 style="text-align: center">Problem Solving</h1>
-<script src="1-Even or Odd.js"></script>
-<script src="2-Sum Of Positives.js"></script>
-<script src="3-Sum%20without%20highest%20and%20lowest%20number.js"></script>
-<script src=""></script>
-<script src=""></script>
-<script src=""></script>
-<script src=""></script>
+<!-- <script src="1-Even or Odd.js"></script> -->
+<!-- <script src="2-Sum Of Positives.js"></script> -->
+<!-- <script src="3-Sum%20without%20highest%20and%20lowest%20number.js"></script> -->
+<script src="6-Practicing with Function.js"></script>
+<!-- <script src=""></script> -->
+<!-- <script src=""></script> -->
+<!-- <script src=""></script> -->
 </body>
 </html>
