--- a/JavaScript/main.html
+++ b/JavaScript/main.html
@@ -13,7 +13,7 @@
 <!-- <script src="2-Sum Of Positives.js"></script> -->
 <!-- <script src="3-Sum%20without%20highest%20and%20lowest%20number.js"></script> -->
 <script src="6-Practicing with Function.js"></script>
-<!-- <script src=""></script> -->
+<!-- <script src="7-Creating arrays and objects.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 </body>
